--- a/back/src/requirements.txt
+++ b/back/src/requirements.txt
@@ -7,7 +7,7 @@
 alembic==1.13.1
     # via
     #   flask-migrate
-    #   pg1-lib-solution (pyproject.toml)
+    #   gt-back (pyproject.toml)
 blinker==1.7.0
     # via flask
 certifi==2024.2.2
@@ -19,18 +19,15 @@ click==8.1.7
 flask==3.0.2
     # via
     #   flask-cors
-    #   flask-jwt-extended
     #   flask-migrate
     #   flask-sqlalchemy
-    #   pg1-lib-solution (pyproject.toml)
+    #   gt-back (pyproject.toml)
 flask-blueprint==1.3.0
-    # via pg1-lib-solution (pyproject.toml)
+    # via gt-back (pyproject.toml)
 flask-cors==4.0.0
-    # via pg1-lib-solution (pyproject.toml)
-flask-jwt-extended==4.6.0
-    # via pg1-lib-solution (pyproject.toml)
+    # via gt-back (pyproject.toml)
 flask-migrate==4.0.5
-    # via pg1-lib-solution (pyproject.toml)
+    # via gt-back (pyproject.toml)
 flask-sqlalchemy==3.1.1
     # via flask-migrate
 greenlet==3.0.3
@@ -44,7 +41,7 @@ itsdangerous==2.1.2
 jinja2==3.1.3
     # via flask
 load-dotenv==0.1.0
-    # via pg1-lib-solution (pyproject.toml)
+    # via gt-back (pyproject.toml)
 mako==1.3.2
     # via alembic
 markupsafe==2.1.5
@@ -54,10 +51,10 @@ markupsafe==2.1.5
     #   werkzeug
 marshmallow==3.20.2
     # via
+    #   gt-back (pyproject.toml)
     #   marshmallow-sqlalchemy
-    #   pg1-lib-solution (pyproject.toml)
 marshmallow-sqlalchemy==1.0.0
-    # via pg1-lib-solution (pyproject.toml)
+    # via gt-back (pyproject.toml)
 packaging==23.2
     # via
     #   marshmallow
@@ -65,21 +62,19 @@ packaging==23.2
 pluggy==1.4.0
     # via pytest
 psycopg2==2.9.9
-    # via pg1-lib-solution (pyproject.toml)
-pyjwt==2.8.0
-    # via flask-jwt-extended
+    # via gt-back (pyproject.toml)
 pytest==8.0.0
-    # via pg1-lib-solution (pyproject.toml)
+    # via gt-back (pyproject.toml)
 python-dotenv==1.0.1
     # via load-dotenv
 requests==2.31.0
-    # via pg1-lib-solution (pyproject.toml)
+    # via gt-back (pyproject.toml)
 sqlalchemy==2.0.27
     # via
     #   alembic
     #   flask-sqlalchemy
+    #   gt-back (pyproject.toml)
     #   marshmallow-sqlalchemy
-    #   pg1-lib-solution (pyproject.toml)
 typing-extensions==4.9.0
     # via
     #   alembic
@@ -87,8 +82,6 @@ typing-extensions==4.9.0
 urllib3==2.2.0
     # via requests
 uwsgi==2.0.24
-    # via pg1-lib-solution (pyproject.toml)
+    # via gt-back (pyproject.toml)
 werkzeug==3.0.1
-    # via
-    #   flask
-    #   flask-jwt-extended
+    # via flask
