docker + front enviro

--- a/back/Dockerfile
+++ b/back/Dockerfile
@@ -2,9 +2,10 @@ FROM python:3.11.4-bookworm
 
 RUN apt-get update -y && apt-get upgrade -y
 RUN apt-get install -y postgresql-client vim
-WORKDIR /code
 
-COPY ../../../ .
+COPY ./ /code/
+WORKDIR /code
+run ls
 
 ENV PYTHONPATH=/code/src
 
@@ -12,4 +13,4 @@ RUN CPUCOUNT=1 pip install -r src/requirements.txt
 
 EXPOSE 5001
 
-ENTRYPOINT [ "bash", "-cl", "./envs/dev/back/back-start.sh" ]
+ENTRYPOINT [ "bash", "-cl", "./back-start.sh" ]
